--- a/src/classes/OpportunityTriggerHandler.cls
+++ b/src/classes/OpportunityTriggerHandler.cls
@@ -1,10 +1,6 @@
 public with sharing class OpportunityTriggerHandler extends TriggerBase {  
     //Members
     Case[] casesToInsert = new List<Case>();
-    Opportunity[] opportunitiesToInsert = new List<Opportunity>();
-
-    Set<Id> oldOpportunityIds = new Set<Id>();
-    Set<Id> newOppAccountIds = new Set<Id>();
     
     //Constructor
     public OpportunityTriggerHandler() {}
@@ -18,34 +14,10 @@ public with sharing class OpportunityTriggerHandler extends TriggerBase {
             if (c != null) casesToInsert.add(c);
         }
     }
-
-    override public void afterUpdate(SObject oldSo, SObject so) {
-        Opportunity oldO = (Opportunity) oldSo;
-        Opportunity o = (Opportunity) So;
-        if (o.StageName != oldO.StageName &&
-            o.StageName == 'Closed Won') {
-
-            generateRenewalOpportunity(o);
-        }
-    }
-
-    override public void afterInsert(Sobject so) {
-        Opportunity o = (Opportunity) so;
-
-        newOppAccountIds.add(o.AccountId);
-    }
-
+    
     override public void andFinally() {
         if (!casesToInsert.isEmpty()) {
             Database.insert(casesToInsert);
-        }
-
-        if(!opportunitiesToInsert.isEmpty()) {
-            insertRenewalOpportunities();
-        }
-
-        if(!newOppAccountIds.isEmpty()) {
-            UpdateProspectAccounts(newOppAccountIds);
         }
     }
     
@@ -222,10 +194,7 @@ public with sharing class OpportunityTriggerHandler extends TriggerBase {
                     p_contactRoleMap.put(i, new Map<String, OpportunityContactRole>());
                 }
                 for (OpportunityContactRole c : contactRoles) {
-                    String normalized =  '';
-                    if(c.Role <> null) {
-                        c.Role.toLowerCase().trim();
-                    }
+                    String normalized = c.Role.toLowerCase().trim();
                     if (p_contactRoleMap.get(c.OpportunityId).get(normalized) == null) {
                         p_contactRoleMap.get(c.OpportunityId).put(normalized, c);
                     }
@@ -394,178 +363,4 @@ public with sharing class OpportunityTriggerHandler extends TriggerBase {
         
         return c;
     }
-
-    public void generateRenewalOpportunity(Opportunity opp) {
-
-        Opportunity newO = new Opportunity();
-        newO.AccountId = opp.AccountId;
-        newO.Type = 'Existing';
-        newO.StageName = 'Purchase / Timeline';
-        newO.Probability = 50;
-        newO.Prior_Year_Opportunity__c = opp.Id;
-        newO.Lead_Source_Detail__c = opp.Lead_Source_Detail__c;
-        newO.Level_of_Purchase__c = opp.Level_of_Purchase__c;
-        newO.PriceBook2Id = opp.PriceBook2Id;
-        newO.Number_of_Licenses__c = opp.Number_of_Licenses__c;
-        newO.License_Level__c = opp.License_Level__c;
-        
-        String newYear = String.valueOf(opp.CloseDate.year() +1);
-
-        String newName = opp.Name;
-
-        if(newName.toLowerCase().contains('renewal')) {
-            newName = opp.Name.substring(0,opp.Name.toLowerCase().indexOf('renewal'));
-        }
-            
-        newO.Name = newName + ' RENEWAL ' + newYear;
-            
-        opportunitiesToInsert.add(newO);
-        oldOpportunityIds.add(opp.Id);
-
-        system.debug('OLD OPPORTUNITY ACCOUNT ID => ' + opp.AccountId);
-    }
-
-    public void insertRenewalOpportunities(){
-
-        system.debug('Old Oppty Id => ' + oldOpportunityIds);
-
-        Date todaysDate = Date.today();
-
-        Contract[] contracts = [SELECT Id
-                                      ,AccountId
-                                      ,EndDate
-                                      ,Opportunity__c
-                                      ,Status
-                                  FROM Contract
-                                 WHERE Opportunity__c IN :oldOpportunityIds
-                                   AND Status = 'Purchased'
-                                   AND EndDate > :todaysDate
-                                 ORDER By AccountId, EndDate
-                                ];
-        Map<Id,Contract> contractsMap = new Map<Id,Contract>();
-
-        Set<Id> accountIds = new Set<Id>();
-
-        for(Opportunity opp : opportunitiesToInsert) {
-            accountIds.add(opp.AccountId);
-        }
-
-        Account[] accounts = [SELECT Id,OwnerId FROM Account WHERE Id IN :accountIds];
-
-        Map<Id,Id> accountIdToOwnerMap = new Map<Id,Id>();
-
-        for(Account acct : accounts) {
-            accountIdToOwnerMap.put(acct.Id,acct.OwnerId);
-        }
-
-        system.debug('CONTRACTS => ' + contracts);
-
-        for(Contract c : contracts) {
-            contractsMap.put(c.AccountId,c);
-            system.debug('CONTRACT END DATE => ' + c.EndDate);
-        }
-
-        system.debug('Opptys To Insert => ' + opportunitiesToInsert);
-        for(Opportunity opp : opportunitiesToInsert) {
-            system.debug('CONTRACTS MAP => ' + contractsMap);
-            system.debug('OPPORTUNITY ACCOUNT ID => ' + opp.AccountId);
-            system.debug('CONTAINS KEY => ' + contractsMap.containsKey(opp.AccountId));
-            if(contractsMap.containsKey(opp.AccountId)) {
-                opp.CloseDate = contractsMap.get(opp.AccountId).EndDate;
-                opp.OwnerId = accountIdToOwnerMap.get(opp.AccountId);
-                system.debug('CLOSE DATE => ' + opp.CloseDate);
-            }
-        }
-
-        Database.Insert(opportunitiesToInsert);
-        generateRenewalOpportunityDependencies();
-        
-    }
-
-    private void generateRenewalOpportunityDependencies() {
-
-        Map<Id,Opportunity> oldOppIdToNewOppMap = new Map<Id,Opportunity>();
-        OpportunityLineItem[] newOpportunityLineItems = new List<OpportunityLineItem>();
-        OpportunityContactRole[] newOppContactRoles = new List<OpportunityContactRole>();
-        
-        for(Opportunity opp : opportunitiesToInsert) {
-            oldOppIdToNewOppMap.put(opp.Prior_Year_Opportunity__c,opp);
-        }
-
-        OpportunityLineItem[] lineItems = [SELECT Id
-                                                 ,Discount
-                                                 ,Description
-                                                 ,ListPrice
-                                                 ,Existing_License_Id__c
-                                                 ,OpportunityId
-                                                 ,PricebookEntryId
-                                                 ,Quantity
-                                                 ,UnitPrice
-                                                 ,SubTotal
-                                                 ,ProductCode2__c
-                                             FROM OpportunityLineItem 
-                                            WHERE OpportunityId IN :oldOpportunityIds
-                                              AND Product_Family__c = 'License'];
-
-
-        Set<Id> existingLicenseId = new Set<Id>();
-        for(OpportunityLineItem li : lineItems) {
-            if(!String.isBlank(li.Existing_License_Id__c)) {
-                existingLicenseId.add(li.Existing_License_Id__c);
-            }
-        }
-
-        PricebookEntry[] priceBookEntries = [SELECT Id
-                                                   ,Product2Id
-                                               FROM PriceBookEntry
-                                              WHERE Product2Id IN :existingLicenseId];
-
-        Map<Id,Id> existingLicensePriceBookEntry = new Map<Id,Id>();
-
-        for(PricebookEntry pbi : priceBookEntries) {
-            existingLicensePriceBookEntry.put(pbi.Product2Id,pbi.Id);
-        }
-
-        for(OpportunityLineItem li : lineItems) {
-            OpportunityLineItem newLI = li.Clone();
-            newLI.OpportunityId = oldOppIdToNewOppMap.get(li.OpportunityId).Id;
-            if(!String.isBlank(li.Existing_License_Id__c)) {
-                newLI.PriceBookEntryId = existingLicensePriceBookEntry.get(li.Existing_License_Id__c);
-            }
-            newOpportunityLineItems.add(newLI);
-        }
-
-        OpportunityContactRole[] contactRoles = [SELECT ContactId
-                                                       ,OpportunityId
-                                                       ,Role
-                                                   FROM OpportunityContactRole
-                                                  WHERE OpportunityId IN :oldOpportunityIds];
-
-        for(OpportunityContactRole ocr : contactRoles) {
-            OpportunityContactRole nocr = new OpportunityContactRole();
-            nocr = ocr.Clone();
-            nocr.OpportunityId = oldOppIdToNewOppMap.get(ocr.OpportunityId).Id;
-
-            newOppContactRoles.add(nocr);
-        }
-
-        insert newOpportunityLineItems;
-        insert newOppContactRoles;
-    }
-
-    private void UpdateProspectAccounts(Set<Id> accountIds) {
-
-        Account[] accountsToUpdate = [SELECT Id
-                                            ,Client_Status__c
-                                        FROM Account
-                                       WHERE Id IN :accountIds
-                                       ];
-
-        for(Account acct : accounts) {
-            acct.Client_Status__c = 'Prospect';
-        }
-
-        update accounts;
-    }
-
 }
